<resources>
    <string name="app_name">Njangui</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="register">Register</string>
    <string name="reset_password">Forgotten your password ?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="logout">Logout</string>
    <string name="test_push_notification">Test Push Notification</string>
    <string name="register_title">Register</string>
    <string name="phone_label">Phone Number</string>
    <string name="password_label">Password</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="password">Enter password</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_password">Invalid password. It must be at least 8 characters long and contain a combination of letters and digits.</string>
    <string name="_60s_remaining">60s remaining</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="submit_new_password">Submit</string>
    <string name="otp_verification_title">OTP Verification</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password">Enter password</string>
    <string name="email_label">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="error_invalid_email">This email is not in the correct format</string>
    <string name="error_password_mismatch">The confirm password do not match the password</string>
    <string name="otp_send_error">OTP could not be sent</string>
    <string name="error_empty_phone">The phone field should not be empty</string>
    <string name="login_with_phone">Login with phone number</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="account_not_found_login">Login failed, account not found: please register</string>
    <string name="account_not_found_reset">Password reset failed, account not found: please register</string>
    <string name="logged_in">Logged in successfully</string>
    <string name="login_failure">Failed to login</string>
    <string name="otp_verif_failure">OTP verification failed</string>
    <string name="registered">Account created successfully</string>
    <string name="registration_failure">Failed to create the account</string>
    <string name="reset_password_success">Password was changed successfully</string>
    <string name="reset_password_failure">Failed to reset the password</string>
    <string name="account_phone_already_exists">This phone number is already associated to an other account</string>
    <string name="account_email_already_exists">This email is already associated to an other account</string>
    <string name="reset_password_title">Password reset</string>
    <string name="invalid_input">Invalid input</string>
    <string name="email_reset_success">Password reset email sent. Please check your mailbox.</string>
    <string name="email_reset_failure">Could not send password reset email</string>
    <string name="phone_or_email_label">Phone Number or Email</string>
    <string name="enter_phone_or_email">Enter phone number or email</string>
    <string name="send_otp_or_email">Send OTP or Reset Email</string>
    <string name="home_title">Home screen</string>
    <string name="navigation_drawer_open">Opening menu</string>
    <string name="navigation_drawer_close">Closing menu</string>
    <string name="welcome_to_the_home_activity">Welcome to the Home Activity</string>
    <string name="notification_title">Notifications</string>
    <string name="not_available">N/A</string>
    <string name="avatar_desc">Avatar</string>
    <string name="notification_icon">Icon</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification_body">Notification Body</string>
    <string name="notification_title_content">Notification Title</string>
    <string name="messaging_token_label">Messaging token</string>
    <string name="notifications">Received Notifications</string>
    <string name="app_description">Application description</string>
    <string name="logo_description">Logo</string>
    <string name="signin_signup">Login / Register</string>
    <string name="loading">Loading, please wait...</string>
</resources>