<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Email label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/email_label"
        android:textSize="16sp" />

    <!-- Email input field -->
    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <!-- Error message for email -->
    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="@color/error"
        android:visibility="gone" />

    <!-- Password label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/password_label"
        android:textSize="16sp" />

    <!-- Password input field -->
    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- Error message for password -->
    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="@color/error"
        android:visibility="gone" />

    <!-- Confirm Password label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/confirm_password_label"
        android:textSize="16sp" />

    <!-- Confirm Password input field -->
    <EditText
        android:id="@+id/etConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <!-- Error message for confirm password -->
    <TextView
        android:id="@+id/tvConfirmPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="@color/error"
        android:visibility="gone" />

    <!-- Register button -->
    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:textSize="16sp" />
</LinearLayout>
