<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Input Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="16sp" />

    <!-- EditText for phone number or email -->
    <EditText
        android:id="@+id/etEmailReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <!-- Error message for email -->
    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="@color/error"
        android:visibility="gone" />

    <!-- Reset Password Button -->
    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/send_reset_email" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:textSize="16sp" />

</LinearLayout>
